# balalo

./: .gitignore  CMakeLists.txt  CMakePresets.json  balalo.h  main.cpp
balalo/: card.cpp  card.h  card_group.cpp  card_group.h  deck.cpp  deck.h  game_manager.cpp  game_manager.h  hand_instance.cpp  hand_instance.h  hand_type.cpp  hand_type.h  playing_card.cpp  playing_card.h  round_manager.cpp  round_manager.h  run_manager.cpp  run_manager.h
ulilities/: array.h
